--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "react-tooltip": "^4.2.21",
     "recharts": "^2.1.9",
     "web-vitals": "^2.1.4"
   },
