--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.5",
     "react-scripts": "5.0.0",
